--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "debug": "~2.2.0",
     "express": "~4.14.0",
     "jade": "~1.11.0",
+    "jsonwebtoken": "^7.2.1",
     "mongoose": "^4.7.5",
     "morgan": "~1.7.0",
     "serve-favicon": "~2.3.0",
