--- a/package.json
+++ b/package.json
@@ -17,5 +17,9 @@
     "morgan": "~1.7.0",
     "serve-favicon": "~2.3.0",
     "sha1": "^1.1.1"
+  },
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "supertest": "^2.0.1"
   }
 }
