--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jsonwebtoken": "^7.2.1",
     "mongoose": "^4.7.5",
     "morgan": "~1.7.0",
+    "redis": "^2.6.5",
     "serve-favicon": "~2.3.0",
     "sha1": "^1.1.1",
     "socket.io": "^1.7.2",
